# heimdall

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .taplo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/install-poetry/: action.yml
.github/actions/setup-heimdall/: action.yml
.github/workflows/: build.yaml
benchmark/basic/: bench.py
benchmark/basic_performance/: README.md  __init__.py  bench.py
benchmark/basic_performance/env_files/: .gitignore  agamotto.env  gh200-profiling-865fdf5c8f-6zs2l.env  github-workflow.env  hulk.env  machine_template.env  self.env  self_template.env  stormbreaker.env
benchmark/basic_performance/scripts/: run.py
benchmark/basic_performance/scripts/batch/: 100_bw_vs_latency.yaml  101_latency.yaml  102_bandwidth.yaml  103_bw_vs_latency_interleave.yaml  200_cache_heatmap.yaml  temp.yaml
benchmark/basic_performance/scripts/parse/: bw_interleave_parser.py  bw_latency_parser.py  cache_parser.py
benchmark/basic_performance/scripts/plot/: __init__.py  bw_interleave_plot.py  bw_latency_plot.py  heatmap_plot.py
benchmark/basic_performance/scripts/utils/: aslr.py  batch.py  batch_cache.py  build.py  dvfs.py  prefetch.py  result.py  slack.py  smt.py  sudo.py  utils.py
benchmark/basic_performance/scripts/utils/env_files/: agamotto.env  gh200-profiling-865fdf5c8f-6zs2l.env  self_template.env  stormbreaker.env
benchmark/basic_performance/src/: main_bw.cpp  main_cache.cpp
benchmark/basic_performance/src/core/: data_structure.h  job_manager.cpp  job_manager.h  machine_define.h  system_define.h  worker_factory.cpp  worker_factory.h  worker_handler.cpp  worker_handler.h
benchmark/basic_performance/src/machine/: machine_dependency.h
benchmark/basic_performance/src/machine/arm/: ldst_pattern_arm.h  mem_utils_arm.h
benchmark/basic_performance/src/machine/mockup/: ldst_pattern_mockup.h  mem_utils_mockup.h
benchmark/basic_performance/src/machine/x86/ld_st/: ldst_pattern_x86.h  mem_utils_x86.h
benchmark/basic_performance/src/memory/: huge_page_handler.cpp  huge_page_handler.h  mem_allocator.cpp  mem_allocator.h  mem_utils.h  mmap_alloc.cpp  mmap_alloc.h  mmap_alloc_interleave.cpp  mmap_alloc_interleave.h  mmap_alloc_interleave_rand.cpp  mmap_alloc_interleave_rand.h  phys_cont_mem.h
benchmark/basic_performance/src/tasks/: pattern_handler.cpp  pattern_handler.h  pointer_chase_patterns.cpp  pointer_chase_patterns.h  simple_ldst_patterns.cpp  simple_ldst_patterns.h  stride_patterns.cpp  stride_patterns.h
benchmark/basic_performance/src/utils/: input_parser.cpp  input_parser.h  logger.cpp  logger.h  timer.cpp  timer.h
benchmark/llm_bench/: README.md  bench.py
benchmark/llm_bench/datasets/: wiki.test.raw
benchmark/llm_bench/scripts/: llamacpp_run_test.sh  pytorch_perf_test.sh  pytorch_run_test.sh  run.py  vllm_cpu_install.sh  vllm_gpu_run_test.sh  vllm_run_test.sh
benchmark/llm_bench/src/: plot_maker.py  pytorch_perf_profile.py  pytorch_run_test.py
benchmark/lockfree_bench/: .clang-format  .gitignore  BoostMPMCQueueBench.cc  BoostMPMCQueueBench.hh  BoostSPSCQueueBench.cc  BoostSPSCQueueBench.hh  CXLBench.hh  FollyAtomicHashMapBench.cc  FollyAtomicHashMapBench.hh  JunctionGrampaMapBench.cc  JunctionGrampaMapBench.hh  JunctionLeapfrogMapBench.cc  JunctionLeapfrogMapBench.hh  JunctionLinearMapBench.cc  JunctionLinearMapBench.hh  LibcdsBronsonAVLTreeMapBench.cc  LibcdsBronsonAVLTreeMapBench.hh  LibcdsFeldmanHashMapBench.cc  LibcdsFeldmanHashMapBench.hh  LibcdsMichaelHashMapBench.cc  LibcdsMichaelHashMapBench.hh  LibcdsSkipListMapBench.cc  LibcdsSkipListMapBench.hh  Makefile  README.md  TervelWFHashMapBench.cc.notworking  TervelWFHashMapBench.hh.notworking  bench.cc  bench.py  lockfree_test.cc.old  plot.py  run_bench.py  run_lockfree_test.sh.old  run_with_perf.sh  utils.cc  utils.hh
heimdall/: __init__.py  bench.py  heimdall.py
heimdall/utils/: cmd.py  path.py
(+2 files in other folders)
