[project]
authors = [
  { name = "Zixuan Wang", email = "zxwang42@gmail.com" },
  { name = "Jangseon Park", email = "jap036@ucsd.com" },
  { name = "Luyi Li", email = "lul014@ucsd.edu" },
]
dependencies = [
  "typer (>=0.15.1,<0.16.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "invoke (>=2.2.0,<3.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "matplotlib (>=3.10.0,<4.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "rich (>=13.9.4,<14.0.0)",
  "huggingface_hub>=0.28.0",
  "numpy (>=1.26,<2.0.0)",          # LockFree benchmark 'folly' requires numpy < 2.0
]
description = "Heterogeneous Memory Benchmark Suite"
license = { text = "MIT" }
name = "heimdall"
readme = "README.md"
# 3.10 seems LTS-enough, but any 3.6+ should work other than the pyinstaller need 3.8+
requires-python = ">=3.10,<3.14"
version         = "1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=2.0.0,<3.0.0"]

[tool.isort]
profile = "black"

[tool.poetry.scripts]
heimdall = "heimdall.heimdall:app"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"
